# StoryBored.Tech

./: changelog.txt  main.py  pyproject.toml  readme.md  readme.txt  test.txt  vids.npy  youtubeids.plf
static/animal/: ape.html  baboon.html  conodor.html  elephant.html  giraffe.html  koala.html  owl.html  penguin.html  polar.html  tiger.html
static/info/: cases.html  casesp.html  data.html  deaths.html  deathsp.html
templates/: animal.html  info.html
templates/index/: index.html
unfinished/landscape/: 1.uhtml  2.uhtml
