[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Piero Maddaleni <piero@piemadd.com>"]
description = ""
name = "9th-code-jam-thingy"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"
json2html = "^1.3"
replit = "^2.0.0"
[tool.poetry.dev-dependencies]
